--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,17 @@ body {
 .background__bottom {
   position: absolute;
   z-index: -1;
+  width: 70%;
 }
 
 .background__top {
   top: -50%;
-  left: -20%;
+  left: -3%;
 }
 
 .background__bottom {
   top: 50%;
-  right: -20%;
+  right: -25%;
 }
 
 /* CARD */
@@ -59,6 +60,7 @@ body {
   background-color: var(--white);
   border-radius: 0.8rem;
   overflow: hidden;
+  margin-bottom: 1.5rem;
 }
 
 .banner {
@@ -80,13 +82,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.3rem;
 }
 
 .user__info {
   display: flex;
   gap: 10px;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.3rem;
 }
 
 .title {
@@ -111,7 +113,7 @@ body {
   background-color: var(--white-line);
   border: none;
   height: 1px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.4rem;
 }
 
 .data {
@@ -132,4 +134,28 @@ body {
   display: flex;
   text-align: center;
   font-size: 0.8rem;
+  color: var(--blue-desaturated);
+  font-weight: var(--fw-medium);
+}
+
+.footer a {
+  color: var(--white);
+}
+
+/* MEDIA QUERY */
+@media (max-width: 52em) {
+  .background__top,
+  .background__bottom {
+    width: 90%;
+  }
+
+  .background__top {
+    top: -30%;
+    left: -40%;
+  }
+
+  .background__bottom {
+    top: 60%;
+    right: -40%;
+  }
 }
